<resources>
    <string name="app_name">Petagram</string>
    <string name="action_acerca">Acerca De</string>
    <string name="action_contacto">Contacto</string>
    <string name="text_menu">Usted se encuentra en Petagram !.</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_ranking">8</string>
    <string name="favoritas">Mascotas favoritas!</string>
    <string name="tv_titulo_bio">Petagram</string>
    <string name="tv_version">Version 2.0</string>
    <string name="tv_desc">2016 Petagram inc.</string>
    <string name="tv_desc2">All rights reserved.</string>
    <string name="tv_desc3">MBarrios@Petagram</string>
    <string name="btn_regresar"> Regresar </string>
    <string name="tv_titulo_contacto"> Ingresar dirección de Contacto </string>
    <string name="tv_mensaje"> Mensaje </string>
    <string name="tv_mail"> Email </string>
    <string name="btn_mail"> Enviar Comentario </string>
    <string name="msj_nombre"> Sr(a). :</string>
    <string name="msj_mail"> con email : </string>
    <string name="msj"> su mensaje fue enviado con exito!. </string>
    <string name="error_msj">Error al generar correo electronico</string>
    <string name="name_pet"> Peluche </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
