<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/android_3"
    tools:context="com.mbarrios.petagram.BioActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo_bio"
        android:textSize="@dimen/tv_bio"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:text="@string/tv_version"
        android:textSize="@dimen/tv_version"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"/>


    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/tv_desc_padding"
        android:text="@string/tv_desc"
        android:layout_below="@+id/tvVersion"
        android:textSize="@dimen/tv_version"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"/>


    <TextView
        android:id="@+id/tvDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_desc2"
        android:layout_below="@+id/tvDesc"
        android:textSize="@dimen/tv_desc"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"/>


    <TextView
        android:id="@+id/tvDesc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_desc3"
        android:layout_below="@+id/tvDesc2"
        android:textSize="@dimen/tv_desc"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        android:theme="@style/SiguienteBoton"
        android:layout_below="@+id/tvDesc3"/>

</RelativeLayout>
